--- a/JWInputPayPasswordKeyboard/Base.lproj/Main.storyboard
+++ b/JWInputPayPasswordKeyboard/Base.lproj/Main.storyboard
@@ -18,10 +18,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gfB-6D-pOr">
-                                <rect key="frame" x="158" y="160" width="59" height="47"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gfB-6D-pOr">
+                                <rect key="frame" x="137.5" y="160" width="100" height="47"/>
                                 <color key="backgroundColor" red="0.74627903513074556" green="0.99171917688722189" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="100" id="ZkP-oF-pTf"/>
                                     <constraint firstAttribute="height" constant="47" id="sEJ-Br-ODq"/>
                                 </constraints>
                                 <state key="normal" title="Click Me"/>
