过滤已弹出键盘的情况

--- a/JWInputPayPasswordKeyboard/Base.lproj/Main.storyboard
+++ b/JWInputPayPasswordKeyboard/Base.lproj/Main.storyboard
@@ -38,6 +38,9 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="payPasswordBtn" destination="gfB-6D-pOr" id="4vd-v3-tfN"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
